--- a/experiments.html
+++ b/experiments.html
@@ -13,7 +13,7 @@
             <a href="index.html">Home</a>
             <a href="research.html">Research</a>
             <a href="experiments.html" class="active">Experiments</a>
-            <a href="presentations.html">Presentations</a>
+            <a href="Talks.html">Talks</a>
             <a href="publications.html">Publications</a>
             <a href="YunTingCheng_cv.pdf" target="_blank">CV</a>
         </nav>
@@ -21,7 +21,11 @@
 
 <main class="container">
         <h1>Experiments</h1>
-
+        <div class="intro-text-block">
+            <p>
+            I have been involved in the following experiments:
+            </p>
+        </div>
         <!-- SPHEREx -->
 
         <details class="research-theme">
