--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="index.html" class="active">Home</a>
             <a href="research.html">Research</a>
             <a href="experiments.html">Experiments</a>
-            <a href="presentations.html">Presentations</a>
+            <a href="talks.html">Talks</a>
             <a href="publications.html">Publications</a>
             <a href="YunTingCheng_cv.pdf" target="_blank">CV</a>
         </nav>
@@ -58,21 +58,9 @@
                 </p>
 
                 <p>
-                My research interests lie in cosmology and extragalactic science probed with large-scale structure tracers. My work spans several areas within these themes, including:
-                </p>
-
-                <p class="bullet-item">developing analysis algorithms to extract information from cosmological surveys,</p>
-                <p class="bullet-item">constructing data-informed models to improve cosmological analyses,</p>
-                <p class="bullet-item">designing strategies to mitigate systematic effects in cosmological surveys, and</p>
-                <p class="bullet-item">analyzing existing datasets to derive constraints on cosmological and astrophysical information.</p>
-
-                <p>
-                My current work on SPHEREx focuses on optimizing the multi-tracer analysis strategy and galaxy redshift measurements and validations for its main cosmological objective: constraining the primordial non-Gaussianity signal from large-scale galaxy clustering. I also work on modeling the extragalactic background signal, which SPHEREx will probe with unprecedented high sensitivity and spectral resolution in the near-infrared.
-                </p>
-                <p>
-                My previous position was as a Postdoctoral Fellow at 
+                Prior to my current position, I was a JPL Postdoctoral Fellow at 
                 <a href="https://www.jpl.nasa.gov/" target="_blank" rel="noopener noreferrer">NASA JPL</a>. 
-                Before that, I was a graduate student in the 
+                Before that, I was a Ph.D. student in the
                 <a href="https://cosmology.caltech.edu/" target="_blank" rel="noopener noreferrer">Observational Cosmology (ObsCos) group</a> 
                 at <a href="https://www.caltech.edu/" target="_blank" rel="noopener noreferrer">Caltech</a>. 
                 I received my B.S. in Physics at 
