--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@
             <a href="index.html">Home</a>
             <a href="research.html">Research</a>
             <a href="experiments.html">Experiments</a>
-            <a href="presentations.html">Presentations</a>
+            <a href="talks.html">Talks</a>
             <a href="publications.html" class="active">Publications</a>
             <a href="YunTingCheng_cv.pdf" target="_blank">CV</a>
         </nav>
@@ -22,10 +22,11 @@
     <main class="container">
         <h1>Publications</h1>
 
-        <p>
+        <div class="intro-text-block">
+            <p>
             My current publication list can be found on this <a href="https://ui.adsabs.harvard.edu/public-libraries/HTQSnAwmRqGBwgW5oJ9T0g" target="_blank">NASA/ADS</a> library.
-        </p>
-
+            </p>
+        </div>
 
 <h2>First-author (10 published / accepted; 1 under review)</h2>
         <div class="list-section">
