--- a/research.html
+++ b/research.html
@@ -13,7 +13,7 @@
             <a href="index.html">Home</a>
             <a href="research.html" class="active">Research</a>
             <a href="experiments.html">Experiments</a>
-            <a href="presentations.html">Presentations</a>
+            <a href="talks.html">Talks</a>
             <a href="publications.html">Publications</a>
             <a href="YunTingCheng_cv.pdf" target="_blank">CV</a>
         </nav>
@@ -21,6 +21,25 @@
 
 <main class="container">
         <h1>Research</h1>
+
+        <div class="intro-text-block">
+            <p>
+            My research interests lie in cosmology and extragalactic science probed with large-scale structure tracers. My work spans several areas within these themes, including:
+            </p>
+            <ul>
+                <li>developing analysis algorithms to extract information from cosmological surveys,</li>
+                <li>constructing data-informed models to improve cosmological analyses,</li>
+                <li>designing strategies to mitigate systematic effects in cosmological surveys, and</li>
+                <li>analyzing existing datasets to derive constraints on cosmological and astrophysical information.</li>
+            </ul>
+            <p>
+            My current work on SPHEREx focuses on optimizing the multi-tracer analysis strategy and galaxy redshift measurements and validations for its main cosmological objective: constraining the primordial non-Gaussianity signal from large-scale galaxy clustering. 
+            I also work on modeling the extragalactic background signal, which SPHEREx will probe with unprecedented high sensitivity and spectral resolution in the near-infrared.
+            </p>
+            <p>
+            Beyond SPHEREx, I am also actively involved in photometric redshift studies, line intensity mapping, and the extragalactic background light, and other topics, where my work focuses on developing analysis algorithms and engaging in data analysis.           
+            </p>
+        </div>
 
         <!-- Bayesian Inference on 3D Light Cones -->
             <details class="research-theme">
@@ -40,6 +59,7 @@
                             In <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250613863C" target="_blank">Cheng et al. (2025)</a>, we extend our Bayesian Multi-line Intensity Mapping framework developed in <a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...971..159C" target="_blank">Cheng et al. (2024)</a> to map the 3D emission field of broad spectral features, rather than the narrow emission lines typically targeted by LIM, a method we have entitled 'feature intensity mapping'. 
                             This approach enables 3D intensity mapping with some of the brightest features in galaxies' infrared spectra: the polycyclic aromatic hydrocarbon (PAH) emission bands. We forecast the detectability of PAH signals using this technique with the ongoing SPHEREx mission and the proposed PRIMA mission, finding high prospects for detecting the PAH intensity mapping signal from both surveys.
                         </p>
+
                         <h4>Relevant Publication:</h4>
                         <ul>
                         <li>
@@ -61,6 +81,10 @@
                             A key challenge in line intensity mapping (LIM) is separating the target signal from contaminating "interloper" lines that fall at the same observed frequency but originate from different redshifts. 
                             In <a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...971..159C" target="_blank">Cheng et al. (2024)</a>, we apply our 3D light cone analysis framework to develop a novel method to tackle the interloper challenge. Instead of treating interlopers as a contamination, our Bayesian approach leverages the correlated information between all emission lines present in the data, and perform a joint inference that simultaneously extracts the signals from all lines.
                         </p>
+                        <p>
+                            A talk recording on this project can be found <a href="https://mediaspace.illinois.edu/media/t/1_l5uao0ig" target="_blank">here</a>. 
+                        </p>
+
                         <h4>Relevant Publication:</h4>
                         <ul>
                         <li>
@@ -83,6 +107,10 @@
                             This is a data-driven technique to analyze multifrequency images from upcoming cosmological surveys mapping large sky area. Using full information from the data at the two-point level, our method can simultaneously constrain the large-scale structure (LSS), the spectra and redshift distribution of emitting sources, and the noise in the observed data without any prior assumptions beyond the homogeneity and isotropy of cosmological perturbations. 
                             In particular, the method does not rely on source detection or photometric or spectroscopic redshift estimates. We demonstrate our technique with a mock observation from nine optical and near-infrared photometric bands. Our method can recover the input signal and noise without bias, and quantify the uncertainty on the constraints. 
                         </p>
+                        <p>
+                            A talk recording on this project can be found <a href="https://www.youtube.com/watch?v=Mx4MZ9Z2gIg" target="_blank">here</a>. 
+                        </p>
+
                         <h4>Relevant Publication:</h4>
                         <ul>
                         <li>
