--- a/experiments.html
+++ b/experiments.html
@@ -13,7 +13,7 @@
             <a href="index.html">Home</a>
             <a href="research.html">Research</a>
             <a href="experiments.html" class="active">Experiments</a>
-            <a href="Talks.html">Talks</a>
+            <a href="talks.html">Talks</a>
             <a href="publications.html">Publications</a>
             <a href="YunTingCheng_cv.pdf" target="_blank">CV</a>
         </nav>
