--- a/publications.html
+++ b/publications.html
@@ -34,8 +34,8 @@
                 <li>
                     <em>Feature Intensity Mapping: Polycyclic Aromatic Hydrocarbon Emission from All Galaxies Across Cosmic Time</em><br>
                     <strong>Y.-T. Cheng</strong>, B. S. Hensley, T. S.-Y. Lai, 
-                    2025, ApJ submitted, 
-                    <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250613863C" target="_blank">ADS</a>, 
+                    2025, ApJ, 993, 30,
+                    <a href="https://ui.adsabs.harvard.edu/abs/2025ApJ...993...30C/abstract" target="_blank">ADS</a>, 
                     [<a href="https://arxiv.org/abs/2506.13863" target="_blank">arXiv:2506.13863</a>]
                 </li>
                 <li>
@@ -117,15 +117,27 @@
         <div class="list-section">
             <ol>
                 <li>
+                    <em>The SPHEREx Satellite Mission</em><br>
+                    J. J. Bock, et al., 2025, ApJ submitted, 
+                    <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv251102985B" target="_blank">ADS</a>, 
+                    [<a href="https://arxiv.org/abs/2511.02985" target="_blank">arXiv:2511.02985</a>]
+                </li>
+                <li>
+                    <em>Simulating Spectral Confusion in SPHEREx Photometry and Redshifts</em><br>
+                    Z. Huai, et al., 2025, ApJ submitted, 
+                    <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv251001410H" target="_blank">ADS</a>, 
+                    [<a href="https://arxiv.org/abs/2510.01410" target="_blank">arXiv:2510.01410</a>]
+                </li>
+                <li>
                     <em>The SPHEREx Sky Simulator: Science Data Modeling for the First All-Sky Near-Infrared Spectral Survey</em><br>
-                    B. P. Crill, et al., 2025, ApJ submitted, 
-                    <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250524856C" target="_blank">ADS</a>, 
+                    B. P. Crill, et al., 2025, ApJ, 281, 10,
+                    <a href="https://ui.adsabs.harvard.edu/abs/2025ApJS..281...10C/" target="_blank">ADS</a>, 
                     [<a href="https://arxiv.org/abs/2505.24856" target="_blank">arXiv:2505.24856</a>]
                 </li>
                 <li>
                     <em>The Potential of the SPHEREx Mission for Characterizing PAH 3.3 &mu;m Emission in Nearby Galaxies</em><br>
-                    E. Zhang, A. L. Faisst, et al., 2025, ApJ submitted, 
-                    <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250321876Z" target="_blank">ADS</a>, 
+                    E. Zhang, A. L. Faisst, et al., 2025, ApJ, 992, 3,
+                    <a href="https://ui.adsabs.harvard.edu/abs/2025ApJ...992....3Z/" target="_blank">ADS</a>, 
                     [<a href="https://arxiv.org/abs/2503.21876" target="_blank">arXiv:2503.21876</a>]
                 </li>
                 <li>
@@ -136,8 +148,8 @@
                 </li>
                 <li>
                     <em>CIBER 4th flight fluctuation analysis: Pseudo-power spectrum formalism, improved source masking and validation on mocks</em><br>
-                    R. M. Feder, et al., 2025, ApJ submitted, 
-                    <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250117932F" target="_blank">ADS</a>, 
+                    R. M. Feder, et al., 2025, ApJ, 991, 87, 
+                    <a href="https://ui.adsabs.harvard.edu/abs/2025ApJ...991...87F" target="_blank">ADS</a>, 
                     [<a href="https://arxiv.org/abs/2501.17932" target="_blank">arXiv:2501.17932</a>]
                 </li>
                 <li>
