--- a/talks.html
+++ b/talks.html
@@ -25,19 +25,13 @@
         <h2>Upcoming Talks</h2>
         <div class="intro-text-block">
             <p>
-            I am scheduled to attend and give talks at the following upcoming conferences/meetings/seminars:
+            I am scheduled to attend and/or give talks at the following upcoming conferences/meetings/seminars:
             </p>
         </div>
         <div class="list-section">
             <ul>
                 <li>
-                    Cosmoglobe School, Oslo, Norway, Sep 01-12, 2025
-                </li>
-                <li>
-                    Caltech IPAC Seminar, Pasadena, CA, Oct 01, 2025
-                </li>
-                <li>
-                    Infrared Spectroscopy from Space, Pasadena, CA, Oct 06-08, 2025
+                    KITP Program: CMB x LSS, Santa Barbara, CA, Feb, 2026
                 </li>
             </ul>
         </div>
@@ -45,6 +39,9 @@
         <h2>Invited Conference Talks and Lectures</h2>
         <div class="list-section">
             <ul>
+                <li>
+                    Cosmoglobe School, Oslo, Norway, Sep, 2025
+                </li>
                 <li>
                     Cosmology on the Steep Rise Workshop, Sexten, Italy, Feb, 2025
                 </li>
@@ -60,6 +57,9 @@
         <h2>Invited Institution Colloquia and Seminars</h2>
         <div class="list-section">
             <ul>
+                <li>
+                    Caltech IPAC Seminar, Pasadena, CA, Oct, 2025
+                </li>
                 <li>
                     ASIAA Colloquium, Taipei, Taiwan, Dec, 2024
                 </li>
@@ -123,6 +123,9 @@
         <h2>Contributed Talks</h2>
         <div class="list-section">
             <ul>
+                <li>
+                    Infrared Spectroscopy from Space, Pasadena, CA, Oct, 2025
+                </li>
                 <li>
                     Line Intensity Mapping 2025, Annecy, France, Jun, 2025
                 </li>
